Wed Feb 20 17:56:53 UTC 2013  Phil Mesnier  <mesnier_p@ociweb.com>

        * orbsvcs/orbsvcs/Naming/FaultTolerant/FT_Naming_Replication_Manager.cpp:

          Fixed a leak resulting from the double duplication of a couple of object
          references.

Wed Feb 20 16:33:22 UTC 2013  Kevin Stanley  <stanleyk@ociweb.com>

        * orbsvcs/orbsvcs/PortableGroup/PG_Object_Group.cpp:

          Fixed leak with MemberInfo in object group when the addition
          of a member fails for some reason.

Wed Feb 20 16:22:38 UTC 2013  Byron Harris  <harrisb@ociweb.com>

        * orbsvcs/tests/ImplRepo/servers_list/run_test.pl:

          Provide timing information for the list commands to see
          the impact, if any, of determining if servers are
          active for a large number of servers.

Wed Feb 20 14:47:30 UTC 2013  Phil Mesnier  <mesnier_p@ociweb.com>

        * orbsvcs/tests/ImplRepo/servers_list/Test_i.cpp:

          Made explicit an implicit inclusion that failed to build on compact/noinline
          builds.

Wed Feb 20 04:41:54 UTC 2013  Phil Mesnier  <mesnier_p@ociweb.com>

        * tests/Dynamic_TP/POA_Loader/POA_Loader.mpc:

          Another static build fix.

Wed Feb 20 03:49:14 UTC 2013  Kevin Stanley  <stanleyk@ociweb.com>

        * orbsvcs/orbsvcs/Naming/FaultTolerant/FT_Naming_Manager.cpp:

          Added checks for null object group passed to operations.
          Throw an exception if such an object group is passed.

        * orbsvcs/orbsvcs/PortableGroup/PG_Object_Group_Storable.cpp:

          Fixed bug in replication related to loading a file containing
          object group members. The empty_ attribute was not being
          set upon load. This was causing problems with adding a
          member to an object group with existing members.

Tue Feb 19 21:34:33 UTC 2013  Byron Harris  <harrisb@ociweb.com>

        * tao/ImR_Client/ImplRepo.pidl:
        * orbsvcs/ImplRepo_Service/ImR_Locator_i.h: